--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     env_file: .env ## Change this file for customized env variables
     volumes:
       - /data/storage:/app/storage
+    networks:
+      - dokploy-network
 
   rails:
     <<: *base
@@ -19,6 +21,8 @@ services:
     entrypoint: docker/entrypoints/rails.sh
     command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
     restart: always
+    networks:
+      - dokploy-network
 
   sidekiq:
     <<: *base
@@ -31,6 +35,8 @@ services:
       - INSTALLATION_ENV=docker
     command: ['bundle', 'exec', 'sidekiq', '-C', 'config/sidekiq.yml']
     restart: always
+    networks:
+      - dokploy-network
 
   postgres:
     image: pgvector/pgvector:pg16
@@ -44,6 +50,8 @@ services:
       - POSTGRES_USER=postgres
       # Please provide your own password.
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+    networks:
+      - dokploy-network
 
   redis:
     image: redis:alpine
@@ -54,3 +62,9 @@ services:
       - /data/redis:/data
     expose:
       - 6379
+    networks:
+      - dokploy-network
+
+networks:
+  dokploy-network:
+    external: true
