--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,10 @@ services:
   rails:
     <<: *base
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_started
+      redis:
+        condition: service_started
     expose:
       - 3000
     environment:
@@ -27,8 +29,10 @@ services:
   sidekiq:
     <<: *base
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_started
+      redis:
+        condition: service_started
     environment:
       - NODE_ENV=production
       - RAILS_ENV=production
